cluster/apps/dev/tekton/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app tekton-dashboard
  namespace: dev
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "tekton-dashboard.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  number: 9097
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
